--- a/index.html
+++ b/index.html
@@ -9,26 +9,18 @@
     <link rel="stylesheet" href="main.css">
     <link href="https://fonts.googleapis.com/css2?family=Chilanka&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./node_modules/hover.css/css/hover.css">
+    <script src="http://code.jquery.com/jquery-1.7.1.min.js"></script> -->
+    <script src="http://ajax.aspnetcdn.com/ajax/jquery.validate/1.11.1/jquery.validate.min.js"></script>
     <script>
         $(document).ready(function() {
             $("#homePage").validate({
                 rules: {
-                    "username": {
-                        required: true,
-                        minlength: 5,
-                        maxlength: 20
-                    },
-                    "favorcolor": {
+                    "Gender": {
                         required: true
                     }
                 },
                 messages: {
-                    username: {
-                        required: "Enter username",
-                        minlength: "too short",
-                        maxlength: "too long"
-                    },
-                    favorcolor: "Enter favorcolor"
+                    Gender: "Enter favorcolor"
                 },
                 errorPlacement: function(error, element) {
                     error.insertAfter(element);
@@ -48,11 +40,7 @@
 
     <body>
         <div class="container">
-            <form data-role="form" id="homePage">
-                <fieldset data-role="fieldcontain">
-                    <label for="username">Username:</label>
-                    <input type="text" name="username" id="username">
-                </fieldset>
+            <form id="homePage">
                 <h1 class="text-center">Yay, Puppies ! Evaluate Restaurant !</h1>
                 <div class="form-row">
                     <div class="form-group col-md-6">
@@ -78,10 +66,8 @@
                     <div class="form-group col-md-6">
                         Gender
                         <br>
-                        <fieldset data-role="fieldcontain">
-                            <label for="favorcolor">Favorite Color:</label>
-                        </fieldset>
-                        <select id="favorcolor" name="favorcolor">
+
+                        <select id="Gender" name="Gender">
                                 <option value="">Select One</option>
                                 <option value="Male">Male</option>
                                 <option value="Female">Female</option>
@@ -145,9 +131,6 @@
 </div>
 <!-- CDN -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-<script src="http://ajax.aspnetcdn.com/ajax/jquery.validate/1.11.1/jquery.validate.min.js"></script>
-<script src="http://code.jquery.com/jquery-1.7.1.min.js"></script> -->
-
 
 </body>
 
